Added products to swagger
